fix layoutes of enroll course

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -641,6 +641,11 @@ form label {
 .btn-contact:hover {
   background-color: #e5e7eb;
 }
+/*=========================================== enrolment =================================================*/
+.rubik-font{
+  font-family:"Rubik";
+}
+
 
 /*=========================================== plan page =================================================*/
 /* Payment Page Styles */
