--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,11 +8,11 @@
 
   --primary-2-color: #e58fff;
   --primary-2-contrast: #7b08a8;
-  --primary-3-color : #5aeaea;
+  --primary-3-color: #5aeaea;
 
 
-  --primary-sidebar-bg:#f3f3f3;
-  --primary-mainComponent-bg:#fdfdfd;
+  --primary-sidebar-bg: #f3f3f3;
+  --primary-mainComponent-bg: #fdfdfd;
 }
 
 * {
@@ -35,7 +35,7 @@ code {
     monospace;
 }
 
-.pl-0{
+.pl-0 {
   padding-left: 0%;
 }
 
@@ -45,7 +45,7 @@ code {
   font-weight: 700;
 }
 
-.btn-light-gray{
+.btn-light-gray {
   text-decoration: none;
   color: black;
   border-radius: 6px;
@@ -53,7 +53,7 @@ code {
   background-color: #F5F5F6;
 }
 
-.btn-gray-sm{
+.btn-gray-sm {
   text-decoration: none;
   color: black;
   border-radius: 4px;
@@ -63,7 +63,7 @@ code {
   padding: 6px 16px;
 }
 
-.btn-gray-sm:hover{
+.btn-gray-sm:hover {
   text-decoration: none;
   color: black;
   border-radius: 4px;
@@ -73,7 +73,7 @@ code {
   padding: 6px 16px;
 }
 
-.btn-light-gray:hover{
+.btn-light-gray:hover {
   background-color: #F5F5F6;
 }
 
@@ -91,7 +91,7 @@ code {
   color: var(--primary-2-contrast);
 }
 
-.bg-purple{
+.bg-purple {
   background-color: rgba(255, 108, 255, 0.79);
 }
 
@@ -117,7 +117,7 @@ code {
   cursor: pointer;
 }
 
-.cursor-default{
+.cursor-default {
   cursor: default;
 }
 
@@ -150,12 +150,12 @@ code {
   color: #039419;
 }
 
-.placeholder-white::placeholder{
+.placeholder-white::placeholder {
   color: rgba(180, 178, 178, 0.677);
   font-size: small;
 }
 
-.add-mylearning{
+.add-mylearning {
   top: 4%;
   right: 4%;
   padding: 2px;
@@ -165,7 +165,7 @@ code {
   border: 2px solid black;
 }
 
-.remove-mylearning{
+.remove-mylearning {
   top: 4%;
   right: 4%;
   padding: 1px 3px;
@@ -183,23 +183,28 @@ code {
 
 /* Slim scrollbar styling for WebKit browsers */
 .scrollable::-webkit-scrollbar {
-  width: 2px; /* Slim width */
+  width: 2px;
+  /* Slim width */
 }
 
 .scrollable::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Thumb hover color */
+  background: #555;
+  /* Thumb hover color */
 }
 
 /* Slim scrollbar styling for Firefox */
 .scrollable {
-  scrollbar-width: thin; /* Slim width */
-  scrollbar-color: #888 #e0e0e0; /* Thumb and track colors */
+  scrollbar-width: thin;
+  /* Slim width */
+  scrollbar-color: #888 #e0e0e0;
+  /* Thumb and track colors */
 }
 
 /*===================================== navbar custom css ======================================================*/
-.navbar-brand{
+.navbar-brand {
   outline: none;
 }
+
 .nav-color {
   background-color: var(--primary-white);
 }
@@ -251,11 +256,11 @@ code {
 
 .hero .form-control {
   width: 84%;
-  border: none;  
-  box-shadow: none; 
+  border: none;
+  box-shadow: none;
 }
 
-.serch-data-container{
+.serch-data-container {
   position: absolute;
   z-index: 1001;
   padding: 20px;
@@ -339,12 +344,12 @@ form label {
   background: var(--primary-2-color);
 }
 
-.video-heroSection{
+.video-heroSection {
   background: var(--primary-3-color);
 }
 
 .mylearning-heroSection,
-.serchContent-heroSection{
+.serchContent-heroSection {
   background: #f3f4f3;
 }
 
@@ -364,12 +369,12 @@ form label {
 
 /*========================================== Q-paper css ===================================================*/
 .sidebar-Qpaper {
-  background: var( --primary-sidebar-bg);
+  background: var(--primary-sidebar-bg);
   height: 90.8vh;
 }
 
 .main-Qpaper {
-  background:var(--primary-mainComponent-bg);
+  background: var(--primary-mainComponent-bg);
   height: 90.8vh;
   overflow: auto;
 }
@@ -390,7 +395,7 @@ form label {
   position: relative;
 }
 
-.Pyq-year-Badge{
+.Pyq-year-Badge {
   z-index: 10000;
   top: 2%;
   left: 1%;
@@ -419,7 +424,7 @@ form label {
   background: var(--card-item-bg);
 }
 
-.sidebar-CoursesSection{
+.sidebar-CoursesSection {
   background-color: var(--primary-sidebar-bg);
 }
 
@@ -427,12 +432,12 @@ form label {
   background: #e3ffff;
 }
 
-.badge-blue{
+.badge-blue {
   color: rgb(30, 30, 199);
   background-color: rgba(192, 192, 236, 0.779);
 }
 
-.cource-offer-badge{
+.cource-offer-badge {
   position: absolute;
   top: 0;
   left: 0;
@@ -448,7 +453,8 @@ form label {
   justify-content: center;
   align-items: center;
 }
-.support-call i{
+
+.support-call i {
   color: rgb(37 99 235);
 }
 
@@ -461,7 +467,8 @@ form label {
   justify-content: center;
   align-items: center;
 }
-.support-email i{
+
+.support-email i {
   color: rgb(18, 180, 16);
 }
 
@@ -474,7 +481,8 @@ form label {
   justify-content: center;
   align-items: center;
 }
-.support-location i{
+
+.support-location i {
   color: rgb(129, 12, 213);
 }
 
@@ -482,14 +490,14 @@ form label {
 .Auth-header .btn:hover,
 .Auth-header .btn:focus-visible,
 .Auth-header .btn:focus,
-.Auth-header .btn-green:active{
+.Auth-header .btn-green:active {
   background-color: #f8f9fa;
   color: #04bd20;
   border: none;
-  padding:6px
+  padding: 6px
 }
 
-.Auth-header .btn{
+.Auth-header .btn {
   border: none;
 }
 
@@ -543,11 +551,12 @@ form label {
 
 
 /*================================================== Dashbord ===============================================*/
-.bg-darkgray{
-  background-color: rgb(35, 35, 35);;
+.bg-darkgray {
+  background-color: rgb(35, 35, 35);
+  ;
 }
 
-.dashbord-mobilebar-btn{
+.dashbord-mobilebar-btn {
   position: fixed;
   top: 10px;
   z-index: 1025;
@@ -555,17 +564,17 @@ form label {
   border-radius: 8px;
 }
 
-.dashbord-mobilebar{
+.dashbord-mobilebar {
   position: fixed;
   top: 56px;
   left: 0;
 }
 
-.dashboard-nav{
+.dashboard-nav {
   height: calc(100vh - 56px);
 }
 
-.dashboard-main{
+.dashboard-main {
   height: calc(100vh - 56px);
   overflow-y: scroll;
   scrollbar-width: none;
@@ -573,11 +582,11 @@ form label {
 
 @media only screen and (max-width: 770px) {
 
-  .dashboard-nav{
+  .dashboard-nav {
     display: none;
   }
-  
-  .dashboard-main{
+
+  .dashboard-main {
     height: calc(100vh - 56px);
     overflow-y: scroll;
     scrollbar-width: none;
@@ -762,11 +771,25 @@ form label {
 
 /*============================================= loder =================================================*/
 @keyframes blink {
-  0% { opacity: 0; }
-  25% { opacity: 0.3; }
-  50% { opacity: 1; }
-  75% { opacity: 0.3; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 0.3;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  75% {
+    opacity: 0.3;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 .blinking-spinner {
@@ -793,13 +816,13 @@ form label {
 
 
 /*=========================================== video player ===============================================*/
-.videoPlayer{
+.videoPlayer {
   height: 100%;
   width: 100%;
   border-radius: 16px;
 }
 
-.play-cource-demo{
+.play-cource-demo {
   position: absolute;
   bottom: 30px;
   right: 10px;
@@ -822,7 +845,8 @@ form label {
 
 .about-header h1 {
   font-size: 2.5rem;
-  color: #2e7d32; /* subtle green */
+  color: #2e7d32;
+  /* subtle green */
 }
 
 .about-header p {
@@ -879,7 +903,8 @@ form label {
 }
 
 .about-text li i {
-  color: #1abc9c; /* teal tone for icons */
+  color: #1abc9c;
+  /* teal tone for icons */
   margin-right: 0.6rem;
 }
 
@@ -905,15 +930,54 @@ form label {
   }
 }
 
+/*=========================================== AnnounceMent ===============================================*/
+.form-label {
+  color: #4d4d4d;
+  font-weight: 600;
+}
+
+.user-checkbox {
+  border: 1px solid #c8e6c9;
+  border-radius: 6px;
+  padding: 0.4rem 0.6rem;
+  margin-bottom: 0.4rem;
+}
+
+textarea.form-control {
+  background: #f9fbe7;
+}
+
+input.form-control,
+textarea.form-control {
+  border-radius: 8px;
+  border-color: #8bab94;
+}
+
+.btn-success {
+  background-color: var(--primary-color);
+  border-color: var(--primary-contrast-1);
+  padding: 0.6rem 2rem;
+  font-weight: bold;
+  font-size: 1.1rem;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-success:hover {
+  background-color: var(--primary-contrast-1);
+  transform: scale(1.01);
+}
+
+
 
 
 /*=========================================== media Queri ===============================================*/
 @media only screen and (max-width: 770px) {
+
   /* Notes section */
   .notes-heroSection,
   .video-heroSection,
-   .mylearning-heroSection,
-   .serchContent-heroSection{
+  .mylearning-heroSection,
+  .serchContent-heroSection {
     font-size: x-small;
   }
 
@@ -940,6 +1004,7 @@ form label {
 }
 
 @media only screen and (max-width: 990px) {
+
   /* Q-paper Section */
   .sidebar-Qpaper {
     display: none;
@@ -954,7 +1019,7 @@ form label {
 
 
 @media only screen and (max-width: 500px) {
-  .mylearning-section-heading h5{
+  .mylearning-section-heading h5 {
     font-size: small;
   }
 
@@ -973,4 +1038,3 @@ form label {
     font-size: x-small;
   }
 }
-
