--- a/client/src/index.css
+++ b/client/src/index.css
@@ -430,6 +430,17 @@ form label {
   color: rgb(190, 15, 15);
 }
 
+
+/*=========================================== pdf viewer component css ==============================================*/
+
+.pdfviewer-close-btn {
+  top: 66;
+  right: 0;
+  z-index: 1100;
+  border-radius: 0;
+
+}
+
 /*=========================================== notes component css ==============================================*/
 .notes-heroSection,
 .purple-heroSection {
