--- a/next-examee/styles/dashboard-layout.css
+++ b/next-examee/styles/dashboard-layout.css
@@ -382,6 +382,12 @@
     padding-bottom: 100px;
 }
 
+.dl-content-full {
+    padding-top: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
 .dl-hamburger {
     background: white;
     border: 1px solid #f1f5f9;
