--- a/next-examee/styles/dashboard-layout.css
+++ b/next-examee/styles/dashboard-layout.css
@@ -380,6 +380,8 @@
     padding: 32px;
     overflow-x: hidden;
     padding-bottom: 100px;
+    position: relative;
+    z-index: 1;
 }
 
 .dl-content-full {
